--- a/app/src/main/res/layout/fragment_restaurnat_details.xml
+++ b/app/src/main/res/layout/fragment_restaurnat_details.xml
@@ -36,7 +36,7 @@
         android:layout_alignParentTop="true"
         android:fontFamily="@font/inter_semibold"
         android:gravity="top"
-        android:text="Details Restaurant"
+        android:text="Создание брони"
         android:textAppearance="@style/details_res"
         app:layout_constraintBottom_toBottomOf="@+id/up_view"
         app:layout_constraintEnd_toEndOf="@+id/up_view"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/up_view" />
 
     <TextView
-        android:id="@+id/tava_restau"
+        android:id="@+id/details_name"
         android:layout_width="157dp"
         android:layout_height="24dp"
         android:layout_marginStart="18dp"
@@ -76,7 +76,7 @@
         android:layout_marginTop="4dp"
         android:src="@drawable/icon_gps"
         app:layout_constraintStart_toStartOf="@id/view"
-        app:layout_constraintTop_toBottomOf="@id/tava_restau"
+        app:layout_constraintTop_toBottomOf="@id/details_name"
         tools:ignore="ContentDescription" />
 
     <!-- Адрес -->
@@ -91,7 +91,7 @@
         android:textColor="#666666"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toBottomOf="@id/tava_restau" />
+        app:layout_constraintTop_toBottomOf="@id/details_name" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -120,12 +120,12 @@
 
     <TextView
         android:id="@+id/open_today"
-        android:layout_width="70dp"
+        android:layout_width="90dp"
         android:layout_height="16dp"
         android:layout_marginStart="4dp"
         android:fontFamily="@font/inter_medium"
         android:gravity="top"
-        android:text="Open today"
+        android:text="Часы работы"
         android:textAppearance="@style/open_today"
         app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintStart_toEndOf="@+id/imageView5" />
@@ -137,7 +137,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/inter_semibold"
         android:gravity="top"
-        android:text="10:00 AM - 12:00 PM"
+        android:text="09:00 - 22:00"
         android:textAppearance="@style/am_12_00_pm"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/open_today" />
