--- a/app/src/main/res/layout/item_booking.xml
+++ b/app/src/main/res/layout/item_booking.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
+    android:layout_height="120dp"
     android:layout_marginHorizontal="18dp"
     android:background="@drawable/item_background"
     android:elevation="10dp"
@@ -59,12 +59,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/inter_regular"
         android:text="kazi Deiry, Taiger Pass\nChittagong"
         android:textColor="#666666"
         android:textSize="12sp"
-        android:fontFamily="@font/inter_regular"
+        app:layout_constraintEnd_toStartOf="@+id/book_button"
         app:layout_constraintStart_toEndOf="@id/imageView"
         app:layout_constraintTop_toBottomOf="@id/name" />
 
@@ -85,5 +86,18 @@
         android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/booking_date"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="15dp"-->
+<!--        android:text="20 декабря 2025"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/address"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/address">-->
+
+<!--    </TextView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
