--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -19,7 +19,8 @@
         android:layout_height="64dp"
         android:layout_marginStart="12dp"
         android:layout_marginVertical="12dp"
-        android:src="@drawable/icon_restaurant"
+        android:scaleType="centerCrop"
+        android:background="@drawable/shape_image_restaurant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +30,7 @@
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="24dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:text="Название заведения"
@@ -60,11 +61,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/inter_regular"
         android:text="kazi Deiry, Taiger Pass\nChittagong"
         android:textColor="#666666"
         android:textSize="12sp"
-        android:fontFamily="@font/inter_regular"
+        app:layout_constraintEnd_toStartOf="@+id/book_button"
         app:layout_constraintStart_toEndOf="@id/imageView"
         app:layout_constraintTop_toBottomOf="@id/name" />
 
