--- a/app/src/main/res/layout/fragment_restaurnat_details.xml
+++ b/app/src/main/res/layout/fragment_restaurnat_details.xml
@@ -26,7 +26,6 @@
         app:layout_constraintStart_toStartOf="@id/up_view"
         app:layout_constraintTop_toTopOf="@id/up_view"
         tools:ignore="ContentDescription">
-
     </ImageView>
 
     <TextView
@@ -46,7 +45,7 @@
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
-        android:layout_height="358dp"
+        android:layout_height="490dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/shape_cardview"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,10 +72,10 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="4dp"
         android:src="@drawable/icon_gps"
+        app:layout_constraintBottom_toBottomOf="@+id/address"
         app:layout_constraintStart_toStartOf="@id/view"
-        app:layout_constraintTop_toBottomOf="@id/details_name"
+        app:layout_constraintTop_toTopOf="@+id/address"
         tools:ignore="ContentDescription" />
 
     <!-- Адрес -->
@@ -85,13 +84,27 @@
         android:layout_width="0dp"
         android:layout_height="16dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/inter_regular"
-        android:text="kazi Deiry, Taiger Pass Chittagong"
+        android:text="ул. Советская, 28, Ярославль"
         android:textColor="#666666"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/imageView"
         app:layout_constraintTop_toBottomOf="@id/details_name" />
+
+    <TextView
+        android:id="@+id/tv_open_maps"
+        android:layout_width="0dp"
+        android:layout_height="16dp"
+        android:text="@string/open_maps"
+        android:textColor="#666666"
+        android:layout_marginStart="10dp"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        android:fontFamily="@font/inter_regular"
+        app:layout_constraintBottom_toBottomOf="@+id/address"
+        app:layout_constraintStart_toEndOf="@+id/address"
+        app:layout_constraintTop_toTopOf="@+id/address" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -115,7 +128,6 @@
         app:layout_constraintStart_toStartOf="@id/view"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         tools:ignore="ContentDescription">
-
     </ImageView>
 
     <TextView
@@ -131,10 +143,24 @@
         app:layout_constraintStart_toEndOf="@+id/imageView5" />
 
     <TextView
+        android:id="@+id/rating_restaurant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/inter_medium"
+        android:textAppearance="@style/open_today"
+        android:text="Рейтинг"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3">
+
+    </TextView>
+
+    <TextView
         android:id="@+id/am_12_00_pm"
         android:layout_width="130dp"
         android:layout_height="15dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="6dp"
         android:fontFamily="@font/inter_semibold"
         android:gravity="top"
         android:text="09:00 - 22:00"
@@ -142,41 +168,49 @@
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/open_today" />
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/booking_res"-->
-    <!--        android:layout_width="160dp"-->
-    <!--        android:layout_height="21dp"-->
-    <!--        android:layout_marginStart="18dp"-->
-    <!--        android:layout_marginTop="12dp"-->
-    <!--        android:fontFamily="@font/inter_semibold"-->
-    <!--        android:gravity="top"-->
-    <!--        android:text="Booking Restaurant"-->
-    <!--        android:textAppearance="@style/booking_res"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/view" />-->
+    <TextView
+        android:id="@+id/menu_"
+        android:layout_width="38dp"
+        android:layout_height="16dp"
+        android:layout_alignParentTop="true"
+        android:fontFamily="@font/inter_medium"
+        android:gravity="top"
+        android:lineSpacingExtra="0sp"
+        android:text="Меню"
+        android:layout_marginTop="6dp"
+        android:textColor="#666666"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/am_12_00_pm"
+        app:layout_constraintTop_toBottomOf="@+id/am_12_00_pm" />
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/best_of_the"-->
-    <!--        android:layout_width="217dp"-->
-    <!--        android:layout_height="16dp"-->
-    <!--        android:layout_marginTop="4dp"-->
-    <!--        android:fontFamily="@font/inter_medium"-->
-    <!--        android:gravity="top"-->
-    <!--        android:text="Check your city Near by Restaurant"-->
-    <!--        android:textAppearance="@style/best_of_the"-->
-    <!--        app:layout_constraintStart_toStartOf="@+id/booking_res"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/booking_res" />-->
-
-    <!--    <androidx.recyclerview.widget.RecyclerView-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="200dp"-->
-    <!--        android:layout_marginTop="16dp"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/best_of_the">-->
-    <!--    </androidx.recyclerview.widget.RecyclerView>-->
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="63dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="18dp"
+        android:fontFamily="@font/inter_medium"
+        android:gravity="top"
+        android:textColor="#1F2937"
+        android:text="Описание"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/menu_"
+        app:layout_constraintTop_toBottomOf="@+id/menu_" />
 
     <!-- ===================== Date View Start ===================== -->
+
+    <TextView
+        android:id="@+id/description_text"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/inter_medium"
+        android:gravity="top"
+        android:text="Villagio restaurant and bar has one mission: to provide guests with a fine and fresh seafood experience. Featuring seasonal and sustainable seafood that is flown in fresh daily, our chef-driven menu proves that no matter when you’re dining, seafood can  Read More..."
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <View
         android:id="@+id/view_date"
@@ -340,7 +374,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="469dp" />
+        app:layout_constraintGuide_begin="574dp" />
 
     <View
         android:id="@+id/frame_8074"
