--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -9,8 +9,7 @@
     android:background="@drawable/item_background"
     android:elevation="10dp"
     android:outlineProvider="background"
-    android:layout_marginBottom="16dp"
-    >
+    android:layout_marginBottom="16dp">
 
     <!-- ImageView для иконки ресторана -->
     <ImageView
@@ -20,25 +19,39 @@
         android:layout_marginStart="12dp"
         android:layout_marginVertical="12dp"
         android:scaleType="centerCrop"
-        android:background="@drawable/shape_image_restaurant"
+        android:background="@drawable/shape_rounded_corners"
+        android:clipToOutline="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
+    <TextView
+        android:id="@+id/rating_restaurant"
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:gravity="center"
+        android:text="4.5"
+        android:textColor="#333333"
+        app:layout_constraintBottom_toBottomOf="@+id/name"
+        app:layout_constraintEnd_toEndOf="@+id/book_button"
+        app:layout_constraintStart_toStartOf="@+id/book_button"
+        app:layout_constraintTop_toTopOf="@+id/name">
+    </TextView>
+
     <!-- Название заведения -->
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
-        android:layout_height="24dp"
+        android:layout_height="40dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:text="Название заведения"
-        android:gravity="start|center_vertical"
-        android:textColor="#000000"
-        android:textSize="16sp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/inter_semibold"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center_vertical"
+        android:text="Название заведения"
+        android:textColor="#000000"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="@+id/address"
         app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,7 +73,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/inter_regular"
         android:text="kazi Deiry, Taiger Pass\nChittagong"
         android:textColor="#666666"
@@ -74,17 +87,17 @@
         android:id="@+id/book_button"
         android:layout_width="88dp"
         android:layout_height="28dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
         android:background="@drawable/book_button_background"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/inter_semibold"
         android:gravity="center"
+        android:layout_marginEnd="6dp"
         android:text="Бронь"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
-        android:fontFamily="@font/inter_semibold"
-        android:clickable="true"
-        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name" />
+        app:layout_constraintTop_toBottomOf="@+id/rating_restaurant" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
