getReservations is ready

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/inter_semibold"
-        android:gravity="center"
+        android:gravity="start"
         android:text="Александр Зубков"
         android:textAppearance="@style/sadek_hosse"
         app:layout_constraintStart_toEndOf="@+id/avatar"
