--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
 
     <color name="green">#4CAF50</color>
     <color name="gray">#9E9E9E</color>
+
+    <color name="status_confirmed">#4CAF50</color>     <!-- зеленый -->
+    <color name="status_pending">#FFC107</color>       <!-- желтый -->
+    <color name="status_declined">#F44336</color>      <!-- красный -->
 </resources>
