--- a/app/src/main/res/layout/fragment_restaurnat_details.xml
+++ b/app/src/main/res/layout/fragment_restaurnat_details.xml
@@ -56,7 +56,7 @@
     <TextView
         android:id="@+id/details_name"
         android:layout_width="157dp"
-        android:layout_height="24dp"
+        android:layout_height="26dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/inter_semibold"
@@ -110,9 +110,10 @@
         android:id="@+id/imageView3"
         android:layout_width="0dp"
         android:layout_height="182dp"
-        android:layout_marginHorizontal="18dp"
+        android:layout_marginHorizontal="23dp"
         android:layout_marginTop="24dp"
-        android:src="@drawable/png_restaurant_image_details"
+        android:scaleType="matrix"
+        android:src="@drawable/resource__"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/address"
@@ -148,7 +149,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_medium"
         android:textAppearance="@style/open_today"
-        android:text="Рейтинг"
+        android:text="Рейтинг 4.5"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
