--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -127,4 +127,39 @@
         <item name="android:textColor">#374151</item>
     </style>
 
+    <style name="some_id">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#D4D7DC</item>
+    </style>
+
+    <style name="name_image">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+
+
+    <style name="NavigationRailStyle" parent="Widget.MaterialComponents.NavigationRailView">
+
+        <item name="itemTextColor">@drawable/nav_rail_text_color</item>
+
+        <item name="colorOnSurface">#D4D7DC</item>
+        <item name="android:gravity">center</item>
+
+        <item name="colorPrimary">#FFA014</item>
+        <!-- Цвет фона при нажатии -->
+<!--        <item name="colorSurface">@color/nav_rail_background</item>-->
+        <!-- Размер текста -->
+        <item name="android:textSize">30sp</item>
+        <!-- Стиль текста -->
+        <item name="android:fontFamily">@font/inter_semibold</item>
+
+<!--        <item name="itemBackground">@drawable/nav_rail_selected_background</item>-->
+
+    </style>
+
+    <style name="MyButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:textSize">13sp</item>
+    </style>
+
 </resources>
